--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "express": "^4.18.1",
-    "next": "12.0.10",
+    "next": "12.3.2-canary.10",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
